# bert_tests

./: .gitignore  README.md  build.sh  pyproject.toml
manifests/: models.yaml
results/: perf_onnx.csv  perf_torch.csv
scripts/: bench.py  common.py  download.py  make_table.py
