[project]
name = "bert-tests"
version = "0.1.0"
description = "CPU latency of BERT variants across input lengths."
requires-python = ">=3.11"
dependencies = [
    "torch>=2.5",
    "transformers>=4.48,<5",
    "huggingface-hub>=0.25",
    "numpy",
    "psutil",
    "pyyaml",
    "optimum>=1.23",
    "optimum-onnx>=0.1",
    "onnx>=1.16",
    "onnxruntime>=1.19",
    "sentencepiece",
    "accelerate",
]

[tool.uv]
package = false
